--- a/css/styles.css
+++ b/css/styles.css
@@ -583,6 +583,33 @@ p {
   margin-bottom: 10px;
 }
 
+.tienda {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.card_1, .card_2 {
+  margin-bottom: 20px;
+  width: 300px;
+}
+
+.card_3 {
+  margin-bottom: 60px;
+  width: 300px;
+}
+
+@media (min-width: 992px) {
+  .tienda {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    gap: 40px;
+    margin-top: 40px;
+  }
+}
 @media (min-width: 425px) {
   .cuestionario {
     font-size: 13px;
